# veda

./: .gitignore  .mcp.json  .pre-commit-config.yaml  Cargo.toml  DEVELOPMENT.md  PLAN.md  README.md  RULES.md  STATUS.md  TAB_ROUTING_DEBUG_SUMMARY.md  VEDA_INTERACTIVE.md  VEDA_ORCHESTRATOR.md  VEDA_STREAMING.md  config.yaml  deploy.sh  goal.prompt  input.txt  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.sh  student_parser.py  student_reader.py  tab_fix.md  tab_management_fixes.md  tab_session_bug_fix.md  test_input.txt  test_routing_fix
.claude/: settings.local.json
.tools/hooks/: pytest_block_on_fail.py
docs/: CROSS_CODEBASE_COORDINATION.md
oldaiderbot/: PLAN.md  README.md  STATUS.md  goal.prompt  requirements.txt
oldaiderbot/logs/: README.md
oldaiderbot/src/: harness.py  ledger.py  llm_interaction.py
oldaiderbot/tests/: test_bootstrap.py  test_convergence.py  test_council_planning.disabled  test_edge_cases.disabled  test_file_locking.py  test_file_operations.py  test_goal_update_for_failures.py  test_harness.py  test_harness_vesper.disabled  test_ledger.py  test_llm_evaluation.disabled  test_loop_mechanics.py  test_mesh.disabled  test_resilience.py  test_robustness.py
oldaiderbot/ui/: ansi-to-html.bundle.js
src/: agent_manager.py  agent_manager.rs  aider_interaction.py  app_state.rs  chat.py  chat.rs  claude.rs  cli.py  config.py  constants.py  constants.rs  council_apply.py  deepseek.rs  events.rs  harness.py  ledger.py  lib.rs  llm_interaction.py  llm_interaction.rs  main.py  main.rs  main_broken.rs  ollama_client.py  pytest_interaction.py  shared_ipc.rs  stall_detection.rs  tui.py  ui.rs  ui_components.rs  ui_server.py  vesper_mind.py  web_server.py  web_server.rs
src/backend/: server.js
templates/: base.html  index.html
tests/: README_COMPREHENSIVE_TESTS.md  app_test.rs  async_pipeline_integration_test.rs  claude_code_spawning_test.rs  claude_environment_test.rs  cli.rs  comprehensive_pipeline_test.rs  coordination_conflict_test.rs  coordination_logic_test.rs  coordination_timeout_test.rs  instance_id_closure_fix_test.rs  instance_output_integration_test.rs  instance_spawning_flow_test.rs  instance_spawning_test.rs  ipc_instance_id_routing_test.rs  ipc_test.rs  logging_test.rs  main_instance_work_assignment_test.rs  main_routing_logic_test.rs  max_command_test.rs  mcp_integration_test.rs  mcp_server_test.rs  mcp_spawn_instances_test.rs  mcp_target_instance_passthrough_test.rs  mcp_target_instance_test.rs  multi_agent_test.rs  multi_instance_output_comprehensive_test.rs  multi_instance_output_test.rs  real_claude_spawning_test.rs  scrolling_edge_cases_test.rs  scrolling_test.rs  session_id_routing_test.rs  session_routing_test.rs  session_routing_validation_test.rs  simple_spawning_test.rs  spawning_fix_integration_test.rs  tab_functionality_test.rs  tab_output_test.rs  tab_routing_integration_test.rs  test_agent_manager.py  (+29 more)
ui/: ansi-to-html.bundle.js  index.html
veda/: __init__.py  claude_manager.py  interactive.py  orchestrator.py  veda_tui.py
veda-tui-rust/: .gitignore  AUTOMODE.md  deploy.sh
veda-tui-rust/src/: claude.rs  deepseek.rs  lib.rs  main.rs
veda-tui-rust/tests/: automode_test.rs  integration_test.rs  keyboard_test.rs
web/: index.html
web/static/css/: styles.css
web/static/js/: app.js
webui/: index.html  test.html
