[package]
name = "veda"
version = "0.1.0"
edition = "2021"
description = "AI-Powered Software Development via an Intuitive Web UI"
license = "MIT" # Or your preferred license

[dependencies]
tokio = { version = "1", features = ["full", "sync"] } # Add "sync" feature for Notify
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15" # To load .env files for secrets like API keys
lazy_static = "1.4.0" # For constants.rs

# Web server dependencies
axum = { version = "0.7", features = ["ws"] } # Enable WebSocket feature
tower = { version = "0.4", features = ["util"] } # Enable util feature for service_fn
tower-http = { version = "0.5", features = ["fs", "trace"] } # For static file serving and request tracing
minijinja = { version = "1", features = ["loader"] }
minijinja-autoreload = "1" # Optional: for auto-reloading templates during development
futures = "0.3" # For WebSocket stream handling
# Update hyper to v1.x, compatible with axum v0.7.x and http v1.x
# Also add the "full" feature set to ensure necessary components like `body` are available.
hyper = { version = "1", features = ["full"] }

# Placeholder for potential future dependencies based on DEVELOPMENT.md
# socketioxide = "0.11" # Example WebSocket library
# sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "macros" ] } # Example database library
