[package]
name = "veda-tui"
version = "0.1.0"
edition = "2021"
authors = ["Veda Team"]
description = "Terminal UI for managing Claude instances"
license = "MIT"

[[bin]]
name = "veda-tui"
path = "src/main.rs"

[[bin]]
name = "veda-mcp-server"
path = "src/bin/veda-mcp-server.rs"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Clipboard support
arboard = "3.3"

# Process management
sysinfo = "0.30"
nix = { version = "0.27", features = ["signal", "process"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
tracing-appender = "0.2"

# Time handling
chrono = "0.4"

# Text wrapping
textwrap = "0.16"
unicode-width = "0.1"

# Text input widget
tui-textarea = "0.7.0"

# UUID for instance IDs
uuid = { version = "1.7", features = ["v4"] }

# HTTP client for Ollama API
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
# Temporary file handling for tests
tempfile = "3.9"
