[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "veda"
version = "0.1.0"
description = "AI‑Orchestrated Software Development Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual",
    "aider-install",
    "ollama",
    "pyyaml",
]

[project.scripts]
veda = "src.cli:run"
